Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/LambdaConv25.out
LambdaConv25.java:19:15: compiler.err.prob.found.req: (compiler.misc.invalid.generic.lambda.target: <X>()void, kindname.interface, LambdaConv25.C)
1 error
